<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/movie"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/app_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#FFEB3B"
        android:fontFamily="@font/butcherman"
        android:text="@string/find_your_favorite_movies"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-black"
        android:text="@string/my_name"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_name"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/editTextPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPersonName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:minWidth="95dp"
        android:text="@string/go"
        android:textSize="25sp" />


</RelativeLayout>